fix lang constant

--- a/language/en-GB/plg_system_wtmulticategories.ini
+++ b/language/en-GB/plg_system_wtmulticategories.ini
@@ -1,2 +1,4 @@
 PLG_SYSTEM_WTMULTICATEGORIES = "System - WT Multicategories"
 PLG_SYSTEM_WTMULTICATEGORIES_DESC = "Allows you to add articles or contacts from other categories to categories if they are specified in the custom field. For the convenience of specifying additional Joomla categories, you can use the custom field plugin <code>WT Category</code>: <a href=\"https://web-tolk.ru/dev/joomla-plugins/wt-category-plagin-polzovatelskogo-polya-joomla\" target=\"_blank\">сайт</a>, <a href=\"https://extensions.joomla.org/extension/authoring-a-content/custom-fields/wt-category/\" target=\"_blank\">JED</a>, <a href=\"https://github.com/WebTolk/WT-Category-Joomla-custom-field-plugin-for-categories-selection\" target=\"_blank\">GitHub</a>"
+PLG_SYSTEM_WTMULTICATEGORIES_MULTICATEGORIES_COM_CONTENT_FIELD_ID = "Articles multicategories field"
+PLG_SYSTEM_WTMULTICATEGORIES_MULTICATEGORIES_COM_CONTACT_FIELD_ID = "Contacts multicategories field"
